--- a/style.css
+++ b/style.css
@@ -107,8 +107,43 @@ nav {
 }
 .projects-item {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-column: 1 / 2;
+    grid-template-areas: 
+    'header1 header2'
+    'main web'
+    'footer1 footer2';
+    /*background-color: #05445E;*/
+    background-color: #042735;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #75E6DA;
+    border-radius: 8px;
+}
+.item1 { 
+    grid-area: header1;
+    margin-left: 10px; 
+    margin-top: 10px; 
+}
+.item2 { 
+    grid-area: header2;
+    margin-left: -150px;
+    color: white;
+}
+.item3 { 
+    grid-area: main; 
+    font-size: 12px;
+    margin-left: 15px;
+    color: white;
+}
+.item4 { 
+    grid-area: web; 
+}
+.item5 { 
+    grid-area: footer1; 
+    font-size: 10px;
+    margin-left: 15px;
+    color: white;
+}
+.item6 { 
+    grid-area: footer2; 
     text-align: center;
-    background-color: #05445E;
 }
