--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ nav {
     font-family: 'Rubik', sans-serif;
     font-size: 25px;
     color: #75E6DA;
+    margin-left: 5%;
 }
 #txt {
     font-family: 'Raleway', sans-serif;
@@ -79,8 +80,8 @@ nav {
 
 .skills {
     margin-top: 0px;
-    margin-left: 10%;
-    margin-bottom: 10%;
+    margin-left: 5%;
+    margin-bottom: 5%;
 }
 .skills-content {
     display: grid;
@@ -94,8 +95,8 @@ nav {
 
 .projects {
     margin-top: 0px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 10%;
 }
 .projects-content {
@@ -122,13 +123,13 @@ nav {
 }
 .item1 { 
     grid-area: header1;
-    margin-left: 10px; 
-    margin-top: 10px; 
+    margin-left: 12px; 
+    margin-top: 20px; 
 }
 .item2 { 
     grid-area: header2;
-    margin-left: -150px;
-    margin-top: -8px;
+    margin-left: -170px;
+    margin-top: 2px;
     color: white;
     font-size: 20px;
     font-family: 'Secular One', sans-serif;
@@ -152,12 +153,37 @@ nav {
     grid-area: footer1; 
     font-size: 10px;
     margin-left: 15px;
+    margin-top: 10px;
     color: white;
+    display: flex;
+}
+.item5 #JS{
+    width: 70px;
+    height: 5px;
+    background-color: #f1e05a;
+    border: none;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.item5 #CSS{
+    width: 60px;
+    height: 5px;
+    background-color: #563d7c;
+    border: none;
+}
+.item5 #HTML{
+    width: 40px;
+    height: 5px;
+    background-color: #e34c26;
+    border: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .item6 { 
     grid-area: footer2; 
     text-align: center;
     margin-bottom: 20px;
+    margin-left: -30px;
 }
 #projects-code {
     color: white;
@@ -167,12 +193,13 @@ nav {
     border-color: white;
     border-radius: 10px;
     padding: 5px 5px;
-    font-size: 15px;
+    font-size: 13px;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .contact {
     margin-top: 0px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 10%;
 }
