--- a/style.css
+++ b/style.css
@@ -1,28 +1,48 @@
 body {
-    background-color: #15141A;
+    /*background-color: #15141A;*/
+    background-color: #262530;
 }
 
 nav {
     display: flex;
     justify-content: space-between, space-around;
-    
+    position: fixed;
+    background-color: #1c1b24;
+    margin-top: -8px;
+    margin-left: -20px;
 }
 #perslogo {
-    margin-left: 10px;
+    margin-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .btn-nav {
     display: flex;
     justify-content: space-between, space-around;
-    margin-left: auto;
+    margin-left: 680px;
     margin-right: 50px;
+    margin-top: 10px;
 }
 .btn-nav button {
+    float: left;
     margin-left: 50px;
     background-color: transparent;
     border: none;
     font-family: 'Rubik', sans-serif;
     font-size: 18px;
     color: #75E6DA;
+    height: 40px;
+}
+.btn-nav button:hover {
+    /*box-shadow: 1px 1px 1px white;*/
+    box-shadow: 0 0px 11px 0 #75E6DA;
+    border-radius: 6px;
+    background-color: #75E6DA;
+    color: #15141A; 
+    
+}
+.btn-nav button:active {
+    transform: translateY(2px);
 }
 
 .portada {
@@ -62,8 +82,20 @@ nav {
     margin-top: 180px;
     margin-right: 30px;
 }
-#logo {
+#logogit, #logolink, #logogmail {
     margin-bottom: 20px;
+}
+#logogit:hover {  
+    content: url('Images/github_logo_blue.png');
+}
+#logolink:hover {
+    content: url('Images/linkedin_logo_blue.png');
+}
+#logogmail:hover {
+    content: url('Images/email_logo_blue.png');
+}
+#logogit:active, #logolink:active, #logogmail:active {
+    transform: translateY(2px);
 }
 
 #titulo {
@@ -89,7 +121,7 @@ nav {
 .skills-content {
     display: grid;
     grid-template-columns: auto auto auto;
-    margin-left: 10%;
+    margin-left: 14%;
     margin-top: 80px;
 }
 .skills-item {
@@ -118,11 +150,16 @@ nav {
     'footer1 footer2';
     /*background-color: #05445E;
     background-color: #042735;*/
-    background-color: #262530;
+    background-color: #363442;
     /*border-style: solid;
-    border-width: 1px;
+    border-w    idth: 1px;
     border-color: #75E6DA;*/
     border-radius: 4px;
+    border: 1px solid #363442; 
+}
+.projects-item:hover {
+    border-color: #75E6DA;
+    box-shadow: 0px 0px 8px 0px #75E6DA;
 }
 .item1 { 
     grid-area: header1;
@@ -152,6 +189,9 @@ nav {
 #web {
     border-radius: 4px; 
 }
+#web:hover {
+    box-shadow: 0px 0px 1px 0px white;
+}
 .item5 { 
     grid-area: footer1; 
     font-size: 10px;
@@ -168,12 +208,13 @@ nav {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     color: black;
-    font-size: 10px;
+    font-size: 15px;
     text-align: center;
+    
 }
 .item5 #JS1:hover {
-    height: 12px;
-    margin-top: -3px;
+    height: 10px;
+    margin-top: -2px;
 }
 .item5 #CSS1{
     width: 60px;
@@ -181,12 +222,12 @@ nav {
     background-color: #563d7c;
     border: none;
     color: black;
-    font-size: 10px;
+    font-size: 15px;
     text-align: center;
 }
 .item5 #CSS1:hover {
-    height: 12px;
-    margin-top: -3px;
+    height: 10px;
+    margin-top: -2px;
 }
 .item5 #HTML1{
     width: 40px;
@@ -196,12 +237,12 @@ nav {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     color: black;
-    font-size: 10px;
+    font-size: 15px;
     text-align: center;
 }
 .item5 #HTML1:hover {
-    height: 12px;
-    margin-top: -3px;
+    height: 10px;
+    margin-top: -2px;
 }
 .item6 { 
     grid-area: footer2; 
@@ -220,12 +261,16 @@ nav {
     font-size: 11px;
     font-family: 'Ubuntu', sans-serif;
 }
+#projects-code:hover {
+    border-color: #75E6DA;
+    color: #75E6DA;;
+}
 
 .contact {
     margin-top: 0px;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .contact-content {
     display: grid;
@@ -245,10 +290,12 @@ nav {
 .contact-social1 img {
     margin-top: 5px;
     margin-left: 40px;
+    margin-bottom: 10px;
 }
 .contact-social img {
     margin-top: 5px;
     margin-left: 40px;
+    margin-bottom: 10px;
 }
 #contact-p {
     margin-left: 15px;
@@ -264,4 +311,7 @@ nav {
 }
 .contact-map {
     margin-top: 15px;
+}
+#map {
+    border-radius: 2px;
 }
