--- a/style.css
+++ b/style.css
@@ -33,13 +33,21 @@ nav {
     color: #75E6DA;
     height: 40px;
 }
+.btn-nav button a {
+    text-decoration: none;
+    color: #75E6DA; 
+}
+.btn-nav button:hover a {
+    text-decoration: none;
+    color: #15141A; 
+}
 .btn-nav button:hover {
     /*box-shadow: 1px 1px 1px white;*/
     box-shadow: 0 0px 11px 0 #75E6DA;
     border-radius: 6px;
     background-color: #75E6DA;
+    text-decoration: none;
     color: #15141A; 
-    
 }
 .btn-nav button:active {
     transform: translateY(2px);
@@ -73,7 +81,6 @@ nav {
 
 .about {
     margin-top: -2%;
-    margin-bottom: 15%;
     margin-left: 10%;
 }
 
@@ -114,9 +121,8 @@ nav {
 }
 
 .skills {
-    margin-top: 0px;
+    margin-top: 10%;
     margin-left: 5%;
-    margin-bottom: 5%;
 }
 .skills-content {
     display: grid;
@@ -129,10 +135,9 @@ nav {
 }
 
 .projects {
-    margin-top: 0px;
+    margin-top: 10%;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 10%;
 }
 .projects-content {
     display: grid;
@@ -190,7 +195,7 @@ nav {
     border-radius: 4px; 
 }
 #web:hover {
-    box-shadow: 0px 0px 1px 0px white;
+    box-shadow: 0px 0px 8px 0px #4f4d5e;
 }
 .item5 { 
     grid-area: footer1; 
@@ -267,10 +272,10 @@ nav {
 }
 
 .contact {
-    margin-top: 0px;
+    margin-top: 9%;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
 }
 .contact-content {
     display: grid;
@@ -278,7 +283,7 @@ nav {
     grid-gap: 50px;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 80px;
+    margin-top: 60px;
 }
 .contact-social1 {
     display: flex;
@@ -290,12 +295,12 @@ nav {
 .contact-social1 img {
     margin-top: 5px;
     margin-left: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .contact-social img {
     margin-top: 5px;
     margin-left: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 #contact-p {
     margin-left: 15px;
@@ -310,7 +315,7 @@ nav {
     font-family: 'Ubuntu', sans-serif;
 }
 .contact-map {
-    margin-top: 15px;
+    margin-top: 10px;
 }
 #map {
     border-radius: 2px;
