--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ nav {
     background-color: #1c1b24;
     margin-top: -8px;
     margin-left: -20px;
+    width: 100%;
 }
 #perslogo {
     margin-left: 30px;
@@ -86,11 +87,14 @@ nav {
 
 .social {
     margin-left: auto;
-    margin-top: 180px;
+    margin-top: 220px;
     margin-right: 30px;
 }
+.social li {
+    list-style-type: none;
+}
 #logogit, #logolink, #logogmail {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 #logogit:hover {  
     content: url('Images/github_logo_blue.png');
