--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     /*background-color: #15141A;*/
     background-color: #262530;
@@ -5,53 +10,41 @@ body {
 
 nav {
     display: flex;
-    justify-content: space-between, space-around;
     position: fixed;
-    background-color: #1c1b24;
-    margin-top: -8px;
-    margin-left: -20px;
     width: 100%;
+    height: 70px;
+    background-color: #1c1b24;
 }
 #perslogo {
-    margin-left: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-left: 60%;
 }
 .btn-nav {
-    display: flex;
-    justify-content: space-between, space-around;
-    margin-left: 680px;
-    margin-right: 50px;
-    margin-top: 10px;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
-.btn-nav button {
-    float: left;
-    margin-left: 50px;
-    background-color: transparent;
+.btn-nav a {
     border: none;
+    text-decoration: none;
     font-family: 'Rubik', sans-serif;
     font-size: 18px;
     color: #75E6DA;
-    height: 40px;
-}
-.btn-nav button a {
-    text-decoration: none;
-    color: #75E6DA; 
-}
-.btn-nav button:hover a {
-    text-decoration: none;
-    color: #15141A; 
-}
-.btn-nav button:hover {
-    /*box-shadow: 1px 1px 1px white;*/
-    box-shadow: 0 0px 11px 0 #75E6DA;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     border-radius: 6px;
+}
+.btn-nav a:hover {
+    color: #15141A;
+    box-shadow: 0 0px 11px 0 #75E6DA;
     background-color: #75E6DA;
     text-decoration: none;
-    color: #15141A; 
-}
-.btn-nav button:active {
-    transform: translateY(2px);
 }
 
 .portada {
@@ -81,7 +74,7 @@ nav {
 }
 
 .about {
-    margin-top: -2%;
+    margin-top: 0;
     margin-left: 10%;
 }
 
@@ -125,7 +118,7 @@ nav {
 }
 
 .skills {
-    margin-top: 10%;
+    margin-top: 8.5%;
     margin-left: 5%;
 }
 .skills-content {
@@ -135,7 +128,7 @@ nav {
     margin-top: 80px;
 }
 .skills-item {
-    padding-bottom: 40px;
+    padding-bottom: 100px;
 }
 
 .projects {
@@ -170,12 +163,12 @@ nav {
     border-color: #75E6DA;
     box-shadow: 0px 0px 8px 0px #75E6DA;
 }
-.item1 { 
+.folder { 
     grid-area: header1;
     margin-left: 12px; 
     margin-top: 20px; 
 }
-.item2 { 
+.titulo { 
     grid-area: header2;
     margin-left: -170px;
     margin-top: 2px;
@@ -183,7 +176,7 @@ nav {
     font-size: 20px;
     font-family: 'Secular One', sans-serif;
 }
-.item3 { 
+.descrip { 
     grid-area: main; 
     font-size: 11px;
     margin-left: 20px;
@@ -191,7 +184,7 @@ nav {
     color: white;
     font-family: 'Comfortaa', cursive;
 }
-.item4 { 
+.web { 
     grid-area: web;
     margin-bottom: 15px;
 }
@@ -201,7 +194,7 @@ nav {
 #web:hover {
     box-shadow: 0px 0px 8px 0px #4f4d5e;
 }
-.item5 { 
+.lenguajes { 
     grid-area: footer1; 
     font-size: 10px;
     margin-left: 15px;
@@ -209,7 +202,7 @@ nav {
     color: white;
     display: flex;
 }
-.item5 #JS1{
+.lenguajes #JS1{
     width: 70px;
     height: 5px;
     background-color: #f1e05a;
@@ -221,11 +214,11 @@ nav {
     text-align: center;
     
 }
-.item5 #JS1:hover {
+.lenguajes #JS1:hover {
     height: 10px;
     margin-top: -2px;
 }
-.item5 #CSS1{
+.lenguajes #CSS1{
     width: 60px;
     height: 5px;
     background-color: #563d7c;
@@ -234,11 +227,11 @@ nav {
     font-size: 15px;
     text-align: center;
 }
-.item5 #CSS1:hover {
+.lenguajes #CSS1:hover {
     height: 10px;
     margin-top: -2px;
 }
-.item5 #HTML1{
+.lenguajes #HTML1{
     width: 40px;
     height: 5px;
     background-color: #e34c26;
@@ -249,11 +242,11 @@ nav {
     font-size: 15px;
     text-align: center;
 }
-.item5 #HTML1:hover {
+.lenguajes #HTML1:hover {
     height: 10px;
     margin-top: -2px;
 }
-.item6 { 
+.code { 
     grid-area: footer2; 
     text-align: center;
     margin-bottom: 20px;
@@ -276,7 +269,7 @@ nav {
 }
 
 .contact {
-    margin-top: 9%;
+    margin-top: 10.5%;
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 10%;
