--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     right: 0;
     width: 20%;
     height: 100vh;
-    background-color: rgb(241, 241, 241);
+    background-color: rgba(241, 241, 241, 0.979);
     display: flex;
     flex-direction: column;
 }
@@ -32,6 +32,7 @@ body {
 }
 .nombre h4 {
     font-family: 'Open Sans Condensed', sans-serif;
+    letter-spacing: 1px;
 }
 .redesBL {
     display: flex;
@@ -45,9 +46,31 @@ body {
 #lineaBL {
     width: 90%;
     margin: 1% auto 2% auto;
-    size: 5px;
-    color: #1C1B24;
+    height: 2px;
+    background-color: #1C1B24;
+    border: none;
 }
+.menuBL {
+    margin-top: 4.5%;
+}
+.menuBL a {
+    text-decoration: none;
+}
+.itemMenuBL {
+    display: flex;
+    margin-left: 20%;
+    margin-top: 4%;
+    color: #1C1B24;
+    font-family: 'Fira Sans', sans-serif;
+}
+.itemMenuBL img, .itemMenuBL p {
+    margin: auto 0 auto 0;
+}
+.itemMenuBL p {
+    margin-left: 6%;
+    size: 25px;
+}
+
 
 /* CONTENT */
 .portada{
