--- a/style-responsive.css
+++ b/style-responsive.css
@@ -1,5 +1,9 @@
 /*MOBILE*/
 @media screen and (min-width: 300px) and (max-width: 812px) {
+    .barraLateral {
+        display: none;
+    }
+    
     .h1 {
         font-size: 5px;
         color: blue
