--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ body {
 }
 
 /* SKILLS CONTENT */
-#titulos {
+#tituloSkills, #tituloAboutMe {
     color: white;
     font-size: 3rem;
     margin: 2.5% 0% 0% 3%;
@@ -179,7 +179,6 @@ body {
 .skills {
     display: flex;
     width: 80%;
-    flex-direction: column;
     margin-bottom: 5%;
 }
 .SkillsContent {
@@ -194,7 +193,32 @@ body {
 .aboutMeContent {
     width: 80%;
     display: flex;
+    margin: 5% auto 6.5% auto
 }
-.aboutMeContent iframe {
-    margin: 5% auto 5% auto;
+.CV {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 15%;
+    text-decoration: none;
+    margin: auto 15% auto 10%;
+    font-family: 'Montserrat', sans-serif;
+}
+.CV div {
+    display: flex;
+    margin: 10px;
+    margin-left: 7%;
+}
+#download {
+    margin: auto 0% auto 10%;
+    margin-left: 10%;
+    color: white;
+}
+.CV:hover, #map:hover {
+    box-shadow: 0px 0px 6px #75e6da;
+}
+#map {
+    width: 30%;
+    height: 300px;
+    border: 1px solid white;
+    border-radius: 5px;
 }
