--- a/style.css
+++ b/style.css
@@ -11,6 +11,34 @@ body {
     display: flex;
 }
 
+/* ANIMACIÓN INICIO */
+.inicio {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background-color: #1C1B24;
+    z-index: 20;
+    position: absolute;
+    top: 0;
+}
+.inicio div {
+    margin: auto;
+}
+.inicioTXT {
+    text-align: center;
+    color: #75e6da;
+    margin-top: 3%;
+}
+.inicioTXT h1 {
+    font-size: 40px;
+    font-family: 'Saira', sans-serif;
+}
+.inicioTXT h4 {
+    margin-top: 1%;
+    font-family: 'Open Sans Condensed', sans-serif;
+    letter-spacing: 1px;
+}
+
 /* MENU RESPONSIVE */
 .menuResponsive {
     display: none;
