--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ body {
 .inicio {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #1C1B24;
     z-index: 20;
     position: absolute;
+    position: fixed;
     top: 0;
 }
 .inicio div {
