--- a/style-responsive.css
+++ b/style-responsive.css
@@ -1,130 +1,54 @@
 /* PC GRANDE */
 @media screen and (max-width: 3000px) and (min-width: 1500px) {
-    #tituloPortada, #tituloAboutMe, #tituloSkills {
-        width: 15%;
-    }
-    .lineaPortada {
-        width: 59%;
-    }
-    .projectsContent {
-        padding-top: 0%;
-    }
-    #skills {
-        margin-top: 1%;
-        margin-bottom: 7%;
-    }
-    .aboutMeContent {
-        padding-bottom: 5%;
-        margin: 4% auto 0% auto
-    }
-    .SkillsContent {
-        margin-top: 2.5%;
-    }
-    .SkillsContent img {
-        margin-bottom: 200px;
-    }
-    #skIMG {
-        margin-right: 650px;
-        margin-left: 10px;
-    }
-    .CV {
-        margin: auto 12% auto 0%;
-    }
-    #map {
-        width: 50%;
-        height: 600px;
-    }
-}
-
+    #barraMenuRes {display: none;}}
 /* PC PORTATIL */
 @media screen and (max-width: 1500px) and (min-width: 1000px) {
-    .CV {
-        width: 23%;
-        margin-left: 3%;
-    }
-
-    #map {
-        width: 35%;
-    }
+    #barraMenuRes {display: none;}
 }
-
 /* TABLET */
 @media screen and (max-width: 1000px) and (min-width: 800px) {
-    
+    #barraMenuRes {display: none;}
 }
 
-/*MOBILE*/
-@media screen and (max-width: 450px) {
-    .barraLateral {
-        display: none;
-    }
-    .menuResponsive {
-        display: flex;
-    }
+/* MOBILE */
+@media screen and (max-width: 800px) {
+    /* NAV */
+    #logoNav img {width: 50px; height: 50px;}
+    #nombreNav {font-size: 20px;}
+    .menuNav {display: none;}
+    #barraMenuRes {display: flex; margin: auto 3% auto auto;}
+    .subMenuRes {display: none;}
 
-    .lenguajesItem {
-        font-size: 15px;
-    }
+    /* CONTENT GENERAL */
+    .contentDiv {min-height: 45vh; margin-top: 10%;}
+    .linea {width: 25%;}
+    #pTitulo {font-size: 2.25rem;}
 
-    .divTitulos{
-        width: 90%;
-        text-align: center;
-        padding-top: 7%;
-        padding-bottom: 4%;
-        margin: 0 auto 0 auto;
-    }
-    #tituloPortada, #tituloAboutMe, #tituloSkills {
-        width: 100%;
-        margin: auto 0 auto 0;
-    }
-    .lineaPortada {
-        margin: auto 2% auto 2%;
-        width: 50%;
-    }
-    #lM {
-        display: flex;
-    }
-    .projectsContent {
-        grid-template-columns: 1fr;
-        margin: 0;
-        width: 100%;
-    }
+    /* PORTADA */
+    #portadaTitulo {font-size: 2rem; margin: 3% auto 2% auto;}
+    #tituloPortada {font-size: 0.8rem;}
 
-    .SkillsContent {
-        grid-template-columns: 1fr 1fr;
-        margin-top: 6%;
-    }
-    .SkillsContent img {
-        margin-bottom: 50px;
-    }
-    #skIMG {
-        margin-right: 50px;
-    }
-
-    .aboutMeContent {
-        margin-top: 6%;
-        flex-direction: column;
-        width: 80%;
-    }
-    .CV {
-        width: 50%;
-        margin: 5% auto 5% auto;
-    }
-    .CV div {
-        margin: 0 0 0 5px;
-    }
-    #downloadIMG {
-        width: 25%;
-    }
-    #map {
+    /* SKILLS */
+    .contentSkills {
+        grid-template-columns: auto auto;
+        gap: 10%;
         margin-top: 5%;
-        width: 100%;
+    }
+    .contentSkills img {width: 75px; height: 75%;}
+    #skill3, #skill6 {margin-left: 0;}
+    #skill2, #skill5 {margin: 0;}
+    #skill2, #skill4, #skill6 { margin-left: auto;}
+
+    /* PROJECTS */
+    .projectsContent {
+        grid-template-columns: auto;
+        gap: 3%;
     }
 
-    #tituloPortada, #tituloSkills, #tituloAboutMe{
-        font-size: 1.5rem;
-        /* margin-top: 12%; */
-        text-align: center;
-        /* margin: 8% auto 5% auto; */
-    }
+    /* CONTACT */
+    #Contact {margin-top: 20%;}
+    .contactContent {flex-direction: column; padding-bottom: 10%;}
+    .redesContact {width: 80%; margin: 5% auto 10% auto;}
+    .redContact img {width: 50px; height: 50px;}
+    #map {width: 100%;}
 }
