--- a/style.css
+++ b/style.css
@@ -7,248 +7,224 @@
 body {
     background-color: #1C1B24;
 }
-.subBody {
-    display: flex;
-}
 
-/* ANIMACIÓN INICIO */
-.inicio {
+/* NAVEGACIÓN */
+nav {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100px;
     background-color: #1C1B24;
-    z-index: 20;
-    position: absolute;
-    position: fixed;
-    top: 0;
 }
-.inicio div {
-    margin: auto;
+#logoNav {
+    margin: auto 0 auto 1%;
 }
-.inicioTXT {
-    text-align: center;
-    color: #75e6da;
-    margin-top: 3%;
-}
-.inicioTXT h1 {
-    font-size: 40px;
+#nombreNav {
+    margin: auto 0 auto 2%;
+    color: white;
+    font-size: 30px;
     font-family: 'Saira', sans-serif;
 }
-.inicioTXT h4 {
-    margin-top: 1%;
-    font-family: 'Open Sans Condensed', sans-serif;
-    letter-spacing: 1px;
+.menuNav {
+    margin: auto 5% auto auto;
+    display: flex;
+    width: 35%;
+}
+.aMenuNav {
+    margin: auto 0 auto auto;
+    color: #75e6da;
+    font-family: 'Saira', sans-serif;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 2% 5% 2% 5%;
+}
+.aMenuNav:hover {
+    animation-name: btnNav;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+@keyframes btnNav {
+    0% {
+        border-bottom: 2px solid #75e6da;
+    }
+    25% {
+        border-bottom: 2px solid #75e6da;
+        border-left: 2px solid #75e6da;
+        border-right: 2px solid #75e6da;
+    }
+    50% {
+        border-bottom: 2px solid #75e6da;
+        border-left: 2px solid #75e6da;
+        border-right: 2px solid #75e6da;
+        border-top: 2px solid #75e6da;
+    }
+    75% {
+        border-bottom: 2px solid #75e6da;
+        border-left: 2px solid #75e6da;
+        border-right: 2px solid #75e6da;
+        border-top: 2px solid #75e6da;
+    }
+    100% {
+        border-bottom: 2px solid #75e6da;
+        border-left: 2px solid #75e6da;
+        border-top: 2px solid #75e6da;
+        border-right: 2px solid #75e6da;
+        background-color: #75e6da;
+        color: white;
+    }
 }
 
-/* MENU RESPONSIVE */
-.menuResponsive {
-    display: none;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(241, 241, 241, 0.979);
-}
-#nombreRes {
-    margin: auto 0 auto 4%;
-    font-size: 25px;
-    font-family: 'Arimo', sans-serif;
-}
-#LogoPersRedRes {
-    margin: auto 0 auto 2%;
-}
-#BarraMenuRes {
-    margin: auto 2% auto auto;
-    z-index: 10;
-}
+/* SUB MENU RES */
 .subMenuRes {
     display: none;
-    background-color: rgba(241, 241, 241, 0.979);
     flex-direction: column;
-    padding-top: 5%;
     width: 100%;
-    position: absolute;
-    z-index: 5;
+    margin-top: -0.5%;
+    padding-bottom: 8%;
+    background-color: white;
 }
 .subMenuRes a {
-    text-decoration: none;
-    margin: 2% auto 5% auto;
-    width: 100%;
+    margin: 1% auto 1% auto;
     color: #1C1B24;
-    font-family: 'Fira Sans', sans-serif;
-    text-align: center;
+    text-decoration: none;
+    font-family: 'Saira', sans-serif;
+    font-size: 20px;
 }
 .showMenuRes{
     display: flex;
 }
 
-/* BARRA LATERAL */
-.barraLateral {
-    position: absolute;
-    position: fixed;
-    right: 0;
-    width: 20%;
-    height: 100vh;
-    background-color: rgba(241, 241, 241, 0.979);
+/* CONTENT GENERAL */
+.contentDiv {
     display: flex;
     flex-direction: column;
-}
-#LogoPersRed {
-    margin: 8% auto 5% auto;
-}
-.nombre {
+    width: 80%;
+    min-height: 100vh;
     margin: 0 auto 0 auto;
-    text-align: center;
-    color: #1C1B24;
+    padding-top: 2%;
 }
-.nombre h1 {
-    font-family: 'Saira', sans-serif;
-}
-.nombre h4 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    letter-spacing: 1px;
-}
-.redesBL {
+.titulo {
     display: flex;
-    width: 85%;
-    margin: 8% auto 1% auto;
+    width: 100%;
 }
-    #gitBL {
-        margin: auto auto auto 0;
-    }
-    #linkBL {
-        margin: auto auto auto auto;
-    }
-    #emailBL {
-        margin: auto 0 auto auto;
-        cursor: pointer;
-    }
-.redesBL img:hover {
-    -webkit-transform:scale(1.05);
-}
-#lineaBL {
-    width: 90%;
-    margin: 1% auto 2% auto;
-    height: 2px;
-    background-color: #1C1B24;
-    border: none;
-}
-.menuBL {
-    margin-top: 8%;
-    height: fit-content;
-}
-.menuBL a {
-    text-decoration: none;
-}
-.itemMenuBL {
-    display: flex;
-    margin-left: 10%;
-    margin-bottom: 5%;
-    color: #1C1B24;
-    font-family: 'Fira Sans', sans-serif;   
-}
-.itemMenuBL img, .itemMenuBL p {
+.linea {
+    width: 30%;
     margin: auto 0 auto 0;
+    height: 5px;
+    background-color: white;
+    border: none;
+    border-radius: 5px;
 }
-.itemMenuBL p {
-    margin-left: 6%;
-    size: 25px;
+#pTitulo {
+    text-align: center;
+    width: 40%; 
+    color: white;
+    font-family: 'Baloo Bhai 2', cursive;
+    font-size: 3rem;
+    margin: 0 auto 0 auto;
+}
+#lizq {
+    margin: auto 0 auto auto;
 }
 
 /* PORTADA */
-
-/* .portada {
-    height: 100vh;
-    display: flex;
-    width: 80%;
-
+#portadaTitulo {
+    text-align: center;
+    width: 100%; 
+    color: white;
+    font-family: 'Baloo Bhai 2', cursive;
+    font-size: 2.5rem;
+    margin: 3% auto 0 auto;
+}
+.itemsPortada {
+    margin: 6% auto 0 auto;
+    position: relative;
+    width: 60vw;
+    height: 40vw;
+    max-width: 430px;
+    max-height: 275px;
+    perspective: 1000px;
+    transform-origin: center;
+}
+.items_contentPortada {
     position: absolute;
+    width: 100%;
+    height: 100%;
     transform-origin: center;
     transform-style: preserve-3d;
     transform: translateZ(-30vw) rotateY(0);
-    animation: carousel 10s infinite cubic-beizer(0.77, 0, 0.175, 1) forwards;
+    animation: carousel 8s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
 }
-.portada-cards {
-    margin: auto;
-    width: 50%;
-    background-color: #42414A;
-    display: flex;
-    flex-direction: column;
-    padding: 0.5%;
-    border-radius: 5px;
-    
+.itemPortada {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     width: 60vw;
     height: 40vw;
-    max-width: 380px;
-    max-height: 250px;
+    max-width: 430px;
+    max-height: 275px;
     box-shadow: 0 5px 20px rgba(0,0,0,.1);
     border-radius: 6px;
     transform-origin: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.portada-cards h1 {
-    text-align: center;
-    margin: auto 0 1% 0;
-    color: white;
-    letter-spacing: 4px;
-    font-family: 'Cabin', sans-serif;
-}
-.portada-cards img {
+#tituloPortada {
     width: 100%;
-    width: 0 auto 0 auto;
-    border-radius: 3px;
+    height: 10%;
+    text-align: center;
+    margin: auto 0 auto 0;
+    font-family: 'Rubik', sans-serif;
+}
+.itemPortada img {
+    width: 98%;
+    height: 96%;
+    margin-left: 1.25%;
+}
+#item1Portada {
+    background-color: rgb(73, 70, 241);
+    transform: rotateY(0deg) translateZ(35vw)
+}
+#item2Portada {
+    background-color: #e73636;
+    transform: rotateY(120deg) translateZ(35vw)
+}
+#item3Portada {
+    background-color: #f1e642;
+    transform: rotateY(240deg) translateZ(35vw)
 }
 @keyframes carousel {
-	0%,  17.5%  { transform: translateZ(-35vw) rotateY(0); }
+    0%,  17.5%  { transform: translateZ(-35vw) rotateY(0); }
 	27.5%, 45%  { transform: translateZ(-35vw) rotateY(-120deg); }
 	55%, 72.5%  { transform: translateZ(-35vw) rotateY(-240deg); }
 	82.5%, 100% { transform: translateZ(-35vw) rotateY(-360deg); }
-} */
+}
 
-/* CONTENT */
-#subBody {
-    display: none;
-}
-.filtro {
-    filter: blur(10px);
-}
-#tituloPortada {
-    color: white;
-    font-size: 3rem;
-    margin: 1% 0% 1% 3%;
-    font-family: 'Cabin', sans-serif;
-    letter-spacing: 4px;
-    width: 25%;
-}
-.divTitulos {
-    display: flex;
-}
-.lineaPortada {
-    width: 49%;
-    margin: auto 0 auto 0;
-    height: 7px;
-    background-color: #75e6da;
-    border: none;
-    border-radius: 5px;
-}
-#lM {
-    display: none;
-}
-.projectsContent{
-    padding: 3%;
+/* SKILLS */
+.contentSkills {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: auto auto auto;
     width: 80%;
+    height: 48vh;
+    margin: auto;
+    gap: 30%;
 }
-/* ITEMS */
+#skill3, #skill6 {margin-left: auto;}
+#skill2, #skill5 {margin: 0 auto 0 auto;}
+
+/* PROJECTS */
+.projectsContent {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10%;
+    margin-top: 5%;
+    margin-bottom: 12%;
+}
 .cabeceraItem {
     display: flex;
-}
-.cabeceraItem img, #gitHub {
-    margin: auto 2.5% auto 2.5%;
 }
 #gitHub {
     margin: 1.5% 2.5% auto 2.5%;
@@ -259,6 +235,7 @@ body {
     letter-spacing: 2px;
     color: white;
     width: 100%;
+    padding-left: 12.5%;
     text-align: center;
     margin: auto 0 auto 0;
 }
@@ -267,23 +244,21 @@ body {
     flex-direction: column;
     background-color: #42414A;
     border-radius: 6px;
-    width: 100%;
+    min-width: 80%;
 }
 .item:hover {
     box-shadow: 0px 0px 8px rgba(107, 104, 104, 0.733);
 }
-#webImage {
-    width: 100%;
+#aWebImage {
+    margin: auto auto 0% auto;
+    width: 96%;
     border-radius: 5px;
     object-fit: cover;
     margin-top: 1%;
-}#aWebImage {
-    margin: auto auto 0% auto;
-    width: 96%;
 }
 .lenguajesItem {
     display: flex;
-    gap: 10%;
+    gap: 5%;
     width: 91.5%;
     justify-content: center;
     margin-bottom: 6px;
@@ -293,72 +268,33 @@ body {
     margin: auto 0 2% 5%;
     margin-top: 1%;
 }
-
-/* SKILLS CONTENT */
-#tituloSkills, #tituloAboutMe {
-    color: white;
-    font-size: 3rem;
-    margin: 2% 0% 2% 3%;
-    font-family: 'Cabin', sans-serif;
-    letter-spacing: 4px;
-    width: 25%;
-}
-#skills {
-    margin-top: 7%;
-    margin-bottom: 5%;
-}
-.skills {
-    display: flex;
-    width: 80%;
-}
-.SkillsContent {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 80%;
-    margin: 5% auto 0 auto;
-}
-.SkillsContent img {
-    margin-bottom: 100px;
-}
-.SkillsContent img:hover {
-    -webkit-transform:scale(1.10);
-}
-#skIMG {
-    margin-right: 160px;
+#derItem {
+    margin-left: auto;
 }
 
-/* ABOUT */
-.aboutMeContent {
-    width: 80%;
+/* CONTACT */
+.contactContent {
     display: flex;
-    margin: 8% auto 6% auto
+    width: 100%;
+    height: 75vh;
 }
-.CV {
-    border: 1px solid white;
-    border-radius: 10px;
-    width: 15%;
+.redesContact {
+    margin: auto 5% auto auto;
+    width: 30%;
+}
+.redContact {display: flex;}
+#redPrin {margin-bottom: 10%;}
+#linkContact {
     text-decoration: none;
-    margin: auto 15% auto 10%;
-    font-family: 'Montserrat', sans-serif;
-}
-.CV div {
-    display: flex;
-    margin: 10px;
-    margin-left: 7%;
-}
-#download {
-    margin: auto 0% auto 10%;
-    margin-left: 10%;
     color: white;
-}
-#download:active {
-    transform: translateY(4px);
-}
-.CV:hover, #map:hover {
-    box-shadow: 0px 0px 6px #75e6da;
+    margin: auto 0 auto 5%;
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.25rem;
 }
 #map {
-    width: 35%;
+    margin: auto 5% auto auto;
+    width: 30%;
+    padding: 5%;
     height: 300px;
     border: 1px solid white;
     border-radius: 5px;
