--- a/style.css
+++ b/style.css
@@ -207,12 +207,12 @@ nav {
     display: grid;
     grid-template-columns: auto auto auto;
     width: 80%;
-    height: 48vh;
+    height: 68vh;
     margin: auto;
-    gap: 30%;
+    gap: 20%;
 }
 #skill3, #skill6 {margin-left: auto;}
-#skill2, #skill5 {margin: 0 auto 0 auto;}
+#skill2, #skill5, #skill8 {margin: 0 auto 0 auto;}
 
 /* PROJECTS */
 .projectsContent {
