Finished About Functionallity

--- a/CSS/Pages/about.css
+++ b/CSS/Pages/about.css
@@ -262,3 +262,8 @@ body {
 .skill-card:hover p {
     color: rgba(255, 255, 255, 0.95);
 }
+
+.skill-icon svg {
+    width: 24px;
+    height: 24px;
+}
