--- a/CSS/Pages/projects.css
+++ b/CSS/Pages/projects.css
@@ -47,15 +47,17 @@ body {
 .project-image {
     width: 100%;
     height: 200px;
-    background-color: rgba(0, 0, 0, 0.2);
     overflow: hidden;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .project-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: transform 0.3s ease;
 }
 
