--- a/CSS/Responsive/navBar.responsive.css
+++ b/CSS/Responsive/navBar.responsive.css
@@ -23,9 +23,11 @@
     }
 
     #navBarLogo {
-        height: 40px;
+        height: 30px;
+        width: auto;
         margin: 0;
         display: block;
+        align-self: center;
     }
 
     .hamburger {
