--- a/CSS/Pages/home.css
+++ b/CSS/Pages/home.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(135deg, #12345B 0%, #2A7AD5 100%);
-    height: 111vh;
+    background-attachment: fixed;
 }
 
 .hero-section {
